<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title_hint"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="?attr/colorSurfaceVariant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColor="?attr/colorOnSurface"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDate"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textAllCaps="false"
        app:icon="@drawable/ic_event"
        app:iconTint="?attr/colorPrimary"
        android:layout_marginTop="18dp"
        app:cornerRadius="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="28dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            style="@style/Widget.Material3.Button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="16sp"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_save"
            app:iconTint="?attr/colorOnPrimary"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textAllCaps="false"
            app:cornerRadius="12dp"
            app:icon="@drawable/ic_close"
            app:iconTint="?attr/colorPrimary"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
</LinearLayout>